<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog_bg" >

   	<LinearLayout
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_weight="1"
   	    android:gravity="center"
   	    android:orientation="horizontal" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:textColor="#ffffff"
	        android:text="@string/FeedBackText"
	        android:gravity="center" />

    </LinearLayout>
    
   	
   	<LinearLayout
   	    android:layout_width="fill_parent"
   	    android:layout_height="50dp"
   	    android:gravity="center|top" >

			    <Button
			        android:id="@+id/button1"
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:layout_margin="5dp"
			        android:layout_weight="1"
			        android:text="OK" />
			
			    <Button
			        android:id="@+id/button2"
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:layout_marginBottom="5dp"
			        android:layout_marginTop="5dp"
			        android:text="@string/no_senks" />
			    
			    <Button
			        android:id="@+id/button3"
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:layout_weight="1"
			        android:layout_margin="5dp"
			        android:text="@string/later" />
    </LinearLayout>

</LinearLayout>