<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:orientation="vertical">
    
    	<LinearLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="50dp"
    	    android:gravity="center" >

		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"

		        android:text=""
		        android:textColor="#000000"
		        android:textSize="25sp"
		        android:textStyle="bold" />
    	</LinearLayout>

    	
		<LinearLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	
		    	<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:layout_weight="1"
		    	    android:gravity="center|top"
		    	    android:orientation="vertical" >
		
		    		<TextView

		    		    android:layout_width="fill_parent"
		    		    android:layout_height="wrap_content"
		    		    android:text="@string/Weight"
		    		    android:textColor="#000000"
		    		    android:gravity="center"
		    		    android:textStyle="bold" />
		    		
		    		<LinearLayout
			    	    android:layout_width="fill_parent"
			    	    android:layout_height="wrap_content"
			    	    android:gravity="center|top" >
		
					    <TextView
					        android:id="@+id/textView1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp"
					        android:textStyle="bold" />
					    
					    <TextView
					        android:id="@+id/textView4"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:minHeight="50dp"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp" />
					    
					 </LinearLayout>
		    
		        </LinearLayout>
		    
		   	<LinearLayout
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="1"
		   	    android:gravity="center|top"
		   	    android:orientation="vertical" >
		
		   		<TextView

		   		    android:layout_width="fill_parent"
		   		    android:layout_height="wrap_content"
		   		    android:text="@string/Waist_size"
		   		    android:textColor="#000000"
		   		    android:gravity="center"
		   		    android:textStyle="bold" />
		   		
	   			<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:gravity="center|top" >
		    	
					    <TextView
					        android:id="@+id/textView3"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp"
					        android:textStyle="bold" />
					    
					    
					    <TextView
					        android:id="@+id/textView7"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:minHeight="50dp"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp" />
					    
					    
				</LinearLayout>
			    


		        </LinearLayout>
		        
		   	</LinearLayout>
		   	
		
		
		
		
		
		<LinearLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content" >
    	
		    	<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:layout_weight="1"
		    	    android:gravity="center|top"
		    	    android:orientation="vertical" >
		
		    		<TextView

		    		    android:layout_width="fill_parent"
		    		    android:layout_height="wrap_content"
		    		    android:text="@string/chest"
		    		    android:textColor="#000000"
		    		    android:gravity="center"
		    		    android:textStyle="bold" />
		    		
		    		<LinearLayout
			    	    android:layout_width="fill_parent"
			    	    android:layout_height="wrap_content"
			    	    android:gravity="center|top" >
		
						    <TextView
						        android:id="@+id/textView9"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:gravity="center"
						        android:text=""
						        android:textColor="#000000"
						        android:textSize="20sp"
						        android:textStyle="bold" />
						    
						    <TextView
						        android:id="@+id/textView12"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:gravity="center"
						        android:minHeight="50dp"
						        android:text=""
						        android:textColor="#000000"
						        android:textSize="20sp" />
						    
					</LinearLayout>
		    
		        </LinearLayout>
		    
		   	<LinearLayout
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="1"
		   	    android:gravity="center|top"
		   	    android:orientation="vertical" >
		
		   		<TextView

		   		    android:layout_width="fill_parent"
		   		    android:layout_height="wrap_content"
		   		    android:text="@string/hip"
		   		    android:textColor="#000000"
		   		    android:gravity="center"
		   		    android:textStyle="bold" />
		   		
	   			<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:gravity="center|top">
		    	
					    <TextView
					        android:id="@+id/textView10"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp"
					        android:textStyle="bold" />
		
					    <TextView
					        android:id="@+id/textView14"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:minHeight="50dp"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp" />
					    
				</LinearLayout>

	        </LinearLayout>
		        
		   	

		   	</LinearLayout>		
		
		
		
		
		
		
		
		
		
		   	<LinearLayout
		   	    android:layout_width="fill_parent"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="1"
		   	    android:gravity="center|top"
		   	    android:orientation="vertical" >
		
		   		<TextView

		   		    android:layout_width="fill_parent"
		   		    android:layout_height="wrap_content"
		   		    android:text="@string/neck"
		   		    android:textColor="#000000"
		   		    android:gravity="center"
		   		    android:textStyle="bold" />
		   		
	   			<LinearLayout
		    	    android:layout_width="fill_parent"
		    	    android:layout_height="wrap_content"
		    	    android:gravity="center|top">
		    	
					    <TextView
					        android:id="@+id/textView15"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp"
					        android:textStyle="bold" />
		
					    <TextView
					        android:id="@+id/textView16"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:gravity="center"
					        android:minHeight="50dp"
					        android:text=""
					        android:textColor="#000000"
					        android:textSize="20sp" />
					    
				</LinearLayout>


		        </LinearLayout>		
		
		
		
		
		
		
		
		
		
		
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/gradient_line" >
</View>		
		
		
		
	

</LinearLayout>